fixed info bubble opacity on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,8 @@ body {
         display: flex;
         justify-content: center;
         align-content: center;
-        font-size: 4rem; } }
+        font-size: 4rem;
+        opacity: 1; } }
     @media only screen and (max-width: 37.5em) {
       .main__info-bubble {
         width: 65%; } }
