--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -104,6 +104,7 @@
       justify-content: center;
       align-content: center;
       font-size: 4rem;
+      opacity: 1;
     }
     @media only screen and (max-width: $bp-medium) {
       width: 65%;
